@@ -12,16 +12,13 @@ my $dd = Data::Dumper->new([])
                      ->Quotekeys(0)
                      ->Sortkeys(1);
 
-my $dd_c = Dumper;
-
 foreach my $to_dump (
   [ { foo => "bar\nbaz", quux => sub { "fleem" }  } ],
   [ 'one', 'two' ]
 ) {
 
-  $dd_c->Values([ @$to_dump ]);
   $dd->Values([ @$to_dump ]);
-  
+
   my $example = do {
     local $Data::Dumper::Terse = 1;
     local $Data::Dumper::Indent = 1;
@@ -31,10 +28,8 @@ foreach my $to_dump (
     local $Data::Dumper::Sortkeys = 1;
     Data::Dumper::Dumper(@$to_dump);
   };
-  
+
   is($example, $dd->Dump, 'Both Data::Dumper usages equivalent');
-  
-  is($example, $dd_c->Dump, 'Returned object usage equivalent');
-  
+
   is($example, Dumper(@$to_dump), 'Subroutine call usage equivalent');
 }
